tests/istio_testcases/example_policies/test-istio-scheme-files-options/policy-allow-nothing.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: default
spec:
  {}
