tests/istio_testcases/example_policies/test-istio-scheme-files-options/scheme-test-from-live-cluster.yaml

networkConfigList:
  - name: istio-test-live-cluster
    networkPolicyList:
      - istio


queries:
  - name: connectivity-istio-test
    connectivityMap:
      - istio-test-live-cluster
    outputConfiguration:
      fwRulesGroupByLabelSinglePod: true
    expected: 0
