tests/istio_testcases/example_policies/test-istio-scheme-files-options/scheme-test-np-from-git-repo.yaml
namespaceList: ../../example_podlist/bookinfo_ns_list.json
podList: ../../example_podlist/bookinfo_pods_list.json
#podList: ../../example_podlist/bookinfo_deployments.yaml

networkConfigList:
  - name: istio-test-git-repo-files
    networkPolicyList:
      - https://github.com/np-guard/network-config-analyzer/blob/master/tests/fw_rules_tests/policies/istio-allow-all-policy.yaml
      - https://github.com/np-guard/network-config-analyzer/blob/master/tests/fw_rules_tests/policies/istio-allow-nothing-policy.yaml

queries:
  - name: connectivity-istio-test
    connectivityMap:
      - istio-test-git-repo-files
    outputConfiguration:
      fwRulesGroupByLabelSinglePod: true
    expected: 0
